package com.abhisheksoni.dagexecutor;

import com.abhisheksoni.graph.model.GraphData;

public class ParallelDagExecutor implements DagExecutor {
    @Override
    public void execute(GraphData graphData) {
    }
}
