package com.abhisheksoni.dagexecutor;

import com.abhisheksoni.graph.model.GraphData;
public class SerialDagExecutor implements DagExecutor {
    @Override
    public void execute(GraphData graphData) {
    }
}
