package com.abhisheksoni.graph.model;

import com.abhisheksoni.task.Task;

public record Edge(Task taskA, Task taskB) {}
