package com.abhisheksoni.task;

public abstract class BaseTask implements Task {
    protected String name;

    public String getName() {
        return name;
    }
}
