package com.abhisheksoni.task;

public interface Task {
    void execute();
}
